# AtomicGameEngine

Script/AtomicNET/: .gitignore  AtomicNETProject.json  global.json
Script/AtomicNET/AtomicNET/: AtomicNET.cs  NETApplication.cs  NETCore.cs  project.json
Script/AtomicNET/AtomicNET/Core/: AtomicEngine.cs
Script/AtomicNET/AtomicNETCore/: .gitignore  Program.cs  project.json
Script/AtomicNET/AtomicNETCore/Core/: AtomicEngine.cs
Script/AtomicNET/AtomicNETCore/Docs/: Mac.txt
Script/AtomicNET/AtomicNETService/: AtomicTools.cs  Program.cs  project.json
Script/AtomicNET/AtomicTest/: Program.cs  project.json
Script/AtomicNET/Docs/: Notes.txt
Source/: CMakeLists.txt
Source/Atomic/Script/: ScriptVariantMap.h
Source/AtomicNET/: CMakeLists.txt
Source/AtomicNET/AtomicNETNative/: CMakeLists.txt  NETApplication.cpp  NETApplication.h  NETCore.cpp  NETCore.h  NETEventDispatcher.cpp  NETEventHelper.cpp  NETService.cpp  NETService.h
Source/ToolCore/: CMakeLists.txt
Source/ToolCore/AtomicNET/: AtomicNETService.cpp  AtomicNETService.h  NETProjectGen.cpp  NETProjectGen.h
Source/ToolCore/Command/: NETCmd.cpp  NETCmd.h
Source/ToolCore/JSBind/: JSBPackage.cpp
Source/ToolCore/JSBind/CSharp/: CSFunctionWriter.cpp  CSModuleWriter.cpp
